{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 222,
  "lineage": "8f92a6cf-f4b0-d308-3acc-dcff3cbe5bcc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "product-scraper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:listener/app/tf-ecs-chat/b070fdcb0507b7d6/5ee26afda44dd481",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:targetgroup/tf-ecs-chat/044588e730d93f9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:139407860310:listener/app/tf-ecs-chat/b070fdcb0507b7d6/5ee26afda44dd481",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:loadbalancer/app/tf-ecs-chat/b070fdcb0507b7d6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.product-scraper",
            "aws_lb.main",
            "aws_security_group.lb",
            "aws_subnet.sb_wishlist_pb",
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "product-scraper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:targetgroup/tf-ecs-chat/044588e730d93f9e",
            "arn_suffix": "targetgroup/tf-ecs-chat/044588e730d93f9e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "3003",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:139407860310:targetgroup/tf-ecs-chat/044588e730d93f9e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-ecs-chat",
            "port": 3003,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_wishlist",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:internet-gateway/igw-0453c8aca420a3f18",
            "id": "igw-0453c8aca420a3f18",
            "owner_id": "139407860310",
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:loadbalancer/app/tf-ecs-chat/b070fdcb0507b7d6",
            "arn_suffix": "app/tf-ecs-chat/b070fdcb0507b7d6",
            "dns_name": "tf-ecs-chat-1995665708.af-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:af-south-1:139407860310:loadbalancer/app/tf-ecs-chat/b070fdcb0507b7d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-ecs-chat",
            "security_groups": [
              "sg-08facce759a4b9cbe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092f501280f5d4256"
              },
              {
                "subnet_id": "subnet-0cb21507f921121ac"
              }
            ],
            "subnets": [
              "subnet-092f501280f5d4256",
              "subnet-0cb21507f921121ac"
            ],
            "vpc_id": "vpc-07b3f0e63181fe89b",
            "zone_id": "Z268VQBMOI5EKX"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.sb_wishlist_pb",
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "product-scraper-secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:listener/app/tf-ecs-chat/b070fdcb0507b7d6/686159f72e1dad81",
            "certificate_arn": "arn:aws:acm:af-south-1:139407860310:certificate/b01ad762-dae9-4193-8d29-c6cd29913aa8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:targetgroup/tf-ecs-chat/044588e730d93f9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:139407860310:listener/app/tf-ecs-chat/b070fdcb0507b7d6/686159f72e1dad81",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:af-south-1:139407860310:loadbalancer/app/tf-ecs-chat/b070fdcb0507b7d6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.product-scraper",
            "aws_lb.main",
            "aws_security_group.lb",
            "aws_subnet.sb_wishlist_pb",
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0453c8aca420a3f18",
            "id": "r-rtb-0170de83a464e085a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0170de83a464e085a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw_wishlist",
            "aws_vpc.wishlist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:security-group/sg-0bc39b053302c4465",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc39b053302c4465",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08facce759a4b9cbe"
                ],
                "self": false,
                "to_port": 3003
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08facce759a4b9cbe"
                ],
                "self": false,
                "to_port": 3003
              }
            ],
            "name": "tf-ecs-tasks",
            "name_prefix": "",
            "owner_id": "139407860310",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.wishlist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:security-group/sg-08facce759a4b9cbe",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08facce759a4b9cbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-ecs-alb",
            "name_prefix": "",
            "owner_id": "139407860310",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_wishlist_pb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:subnet/subnet-092f501280f5d4256",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.1.0.32/28",
            "id": "subnet-092f501280f5d4256",
            "map_public_ip_on_launch": true,
            "owner_id": "139407860310",
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:subnet/subnet-0cb21507f921121ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.1.0.48/28",
            "id": "subnet-0cb21507f921121ac",
            "map_public_ip_on_launch": true,
            "owner_id": "139407860310",
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_wishlist_pv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:subnet/subnet-0fce9bd5959b65c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.1.0.0/28",
            "id": "subnet-0fce9bd5959b65c8b",
            "map_public_ip_on_launch": false,
            "owner_id": "139407860310",
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:subnet/subnet-0dea9d31f62a01d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.1.0.16/28",
            "id": "subnet-0dea9d31f62a01d73",
            "map_public_ip_on_launch": false,
            "owner_id": "139407860310",
            "vpc_id": "vpc-07b3f0e63181fe89b"
          },
          "dependencies": [
            "aws_vpc.wishlist_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wishlist_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:139407860310:vpc/vpc-07b3f0e63181fe89b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/20",
            "default_network_acl_id": "acl-00dc47099b985d199",
            "default_route_table_id": "rtb-0170de83a464e085a",
            "default_security_group_id": "sg-036f7deb653b082de",
            "dhcp_options_id": "dopt-ce9a7ca7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07b3f0e63181fe89b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0170de83a464e085a",
            "owner_id": "139407860310"
          }
        }
      ]
    }
  ]
}